Fix alignments of elements in the draft list

--- a/styles/threads.less
+++ b/styles/threads.less
@@ -68,6 +68,7 @@
 			&.list-column-Check,
 			&.list-column-Check .checkmark,
 			&.list-column-★,
+			&.list-column-Name, // Participants in case of drafts
 			&.list-column-Participants,
 			&.list-column-Message,
 			&.list-column-Date {
@@ -82,6 +83,9 @@
 			}
 			&.list-column-Participants {
 				padding-left: 0 !important;
+			}
+			&.list-column-Date {
+				justify-content: flex-end;
 			}
 
 		}
